style.css
html{
  font-size: 62%;
}
body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin: 0;
  padding: 0;
}
.container{
  max-width: 90%;
  margin: auto;
  /*border: 0.1vh solid paleturquoise;*/
  text-align: center;
  font-size: 2rem;
}

@media screen and (max-width:480px) 
/* 
.embed {
  height: 360px;
  width: 480px;
} */

{
  .container{
    max-width: 100%;
  }
}

ol {
  list-style: none;
  counter-reset: my-awesome-counter;
  
}

li {
  counter-increment: my-awesome-counter;
  margin: 0.25rem;
  
}
li::before {
  content: counter(my-awesome-counter);
  background: #662974;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  display: inline-block;
  line-height: 2rem;
  color: white;
  text-align: center;
  margin-right: 0.5rem;
}
ol ol li::before {
  background: #DE51FF;
}
ol ol ol li::before {
  background: #EE9EFF;
}

body {
  font-family: 'PT Serif', serif;
}


/* Hero styles */

.hero-section {
  /* position: relative; */
  width: 80vw; 
  height: 100vh; 
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 90%;
  background: url(images/coding-photo2.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  filter: brightness(60%);
}

.hero-content {
  position: relative;
  color: white;
  margin: 10px;
}

.hero-title {
  font-size: 48px;
  font-weight: 600;
  margin-bottom: 0;
}

.hero-subtitle {
  font-size: 24px;
  font-weight: 200;
  margin-top: 16px;
}

.hero-button {
  background-color: #00cccc;
  color: black;
  border: 2px solid #00e6e6;
  margin-top: 60px;
  padding: 15px 30px;
  font-size: 20px;
  font-weight: 400;
  cursor: pointer;
  border-radius: 8px;
}

.hero-button:hover {
  background-color: #00b3b3;
}

